fixed all layout issues

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -142,11 +142,17 @@ header h1 {
 	background-color: white;
 	padding: 0px 40px 30px;
 }
+#footer_portfolio li {
+	margin-left: 20px;
+	background-color: white;
+	padding: 0px 0px 0px;
+}
 /*#footer_portfolio p:hover {
 	color: red;
 }*/
 #footer_portfolio h1,h2 {
-	padding: 0px 40px 0px;
+	margin: 0px;
+	padding: 0px 40px 10px;
 }
 .drawing {
 	height: 15em;
@@ -160,4 +166,20 @@ header h1 {
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 10px;
+}
+/* --------------------------Scroll to top button-------------------------- */
+#topButton {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
 }
